--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+include: m4aVoicemails
+keep_files: m4aVoicemails
+title: "Hi David it's Mom!"
+name: "Hi David it's Mom!"
